--- a/notebooks/process_non_night_data.ipynb
+++ b/notebooks/process_non_night_data.ipynb
@@ -21,7 +21,11 @@
    "source": [
     "# reduccion de datos: sin mediciones durante la noche\n",
     "\n",
-    "existen algunas estaciones que pierden datos. Esto se vuelve un problema grave si estos datos perdidos son en el periodo de 19 hrs de un dia y 9 hrs del dia siguiente. Estos datos (intervalo completo de 24 hrs desde las 19 hrs de un dia hasya las 19 hrs del dia siguiente) deben ser identificados y borrados\n"
+    "existen algunas estaciones que pierden datos. Esto se vuelve un problema grave si estos datos perdidos son en el periodo de noche. Para nuestro trabajo, eliminaremos estos dias de la medicion dado que no nos sirven para entrenar.\n",
+    "\n",
+    "* Consideraremos el rango de 20 hrs a 10 hrs (14 horas de intervalo)\n",
+    "* esperaremos tenemos almenos 8 hrs de medicion, sin importan si estan entre cortadas, esto significa, 32 datos\n",
+    "* para trabajar mas facilmente, desplazaremos el dia en +4 hrs, de forma que las 24 hrs sean las 00 horas del dia siguiente y las 10 hrs del dia siguiente sean las 14 hrs, esto facilitara el filtrado\n"
    ]
   },
   {
@@ -33,11 +37,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/cleared/VALPARAISO/SANTA MARIA.csv                                                          \r"
+      "../data/cleared\\VALPARAISO\\SANTA MARIA.csv                                                          \r"
      ]
     }
    ],
    "source": [
+    "# primero cargamos los datos limpiados en la iteracion anterior\n",
+    "\n",
     "path = \"../data/cleared\"\n",
     "dfs = []\n",
     "dict_meta = {\"region\": [], \"estacion\": [], \"codigo\": []}\n",
@@ -57,6 +63,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# luego juntaremos estos datos en un solo dataframe, ordenando por el par (codigo, fecha, hora)\n",
+    "\n",
     "df = pd.concat(dfs, ignore_index=True)\n",
     "df = df.sort_values(by=['Codigo', 'Fecha', 'Hora'])\n",
     "df = df.reset_index(drop=True)"
@@ -64,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +84,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,10 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# obtenemos la matriz de los datos y agregamos 2 columnas extras, para el datetime y el datetime desplazado\n",
+    "\n",
     "data = df.values\n",
     "dummy = np.full((data.shape[0], 2), None)\n",
     "data = np.append(data, dummy, axis=1)"
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +117,7 @@
        "(5301924, 12)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,71 +128,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "obteniendo sub rangos ... \n",
       "starting workers ....\n",
-      "waiting workers ...\n",
-      "starting worker range [0, 220913]... done\n",
-      "starting worker range [441826, 662739]... done\n",
-      "starting worker range [662739, 883652]... done\n",
-      "starting worker range [220913, 441826]... done\n",
-      "starting worker range [1325478, 1546391]... done\n",
-      "starting worker range [883652, 1104565]... done\n",
-      "starting worker range [1104565, 1325478]... done\n",
-      "starting worker range [2209130, 2430043]... done\n",
-      "starting worker range [1546391, 1767304]... done\n",
-      "starting worker range [1767304, 1988217]... done\n",
-      "starting worker range [2430043, 2650956]... done\n",
-      "starting worker range [1988217, 2209130]... done\n",
-      "starting worker range [2650956, 2871869]... done\n",
-      "starting worker range [3092782, 3313695]... done\n",
-      "starting worker range [3313695, 3534608]... done\n",
-      "starting worker range [2871869, 3092782]... done\n",
-      "starting worker range [3534608, 3755521]... done\n",
-      "starting worker range [3755521, 3976434]... done\n",
-      "starting worker range [4197347, 4418260]... done\n",
-      "starting worker range [4639173, 4860086]... done\n",
-      "starting worker range [3976434, 4197347]... done\n",
-      "starting worker range [4418260, 4639173]... done\n",
-      "starting worker range [4860086, 5080999]... done\n",
-      "starting worker range [5080999, 5301912]... done\n"
+      "launching worker for [0,220913]\n"
+     ]
+    },
+    {
+     "ename": "BrokenPipeError",
+     "evalue": "[Errno 32] Broken pipe",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mBrokenPipeError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-527297421756>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     70\u001b[0m \u001b[1;31m# compute_datetime(data, 0, 50, None)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[1;31m# data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m \u001b[0mrun_compute_datetime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m24\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m \u001b[1;31m# df[\"datetime\"] = ddtt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m \u001b[1;31m# df[\"displaced_date\"] = displaced_date\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-15-527297421756>\u001b[0m in \u001b[0;36mrun_compute_datetime\u001b[1;34m(data, N)\u001b[0m\n\u001b[0;32m     42\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"launching worker for [{},{}]\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mini\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m         \u001b[0mjobs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mProcess\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mworker\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0margs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mini\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m         \u001b[0mjobs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"waiting workers ...\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mjobs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\programdata\\miniconda3\\lib\\multiprocessing\\process.py\u001b[0m in \u001b[0;36mstart\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    110\u001b[0m                \u001b[1;34m'daemonic processes are not allowed to have children'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    111\u001b[0m         \u001b[0m_cleanup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 112\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_popen\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_Popen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    113\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_sentinel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_popen\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msentinel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    114\u001b[0m         \u001b[1;31m# Avoid a refcycle if the target function holds an indirect\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\programdata\\miniconda3\\lib\\multiprocessing\\context.py\u001b[0m in \u001b[0;36m_Popen\u001b[1;34m(process_obj)\u001b[0m\n\u001b[0;32m    221\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mstaticmethod\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    222\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_Popen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_obj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 223\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_default_context\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_context\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mProcess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_Popen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_obj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    224\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    225\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mDefaultContext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBaseContext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\programdata\\miniconda3\\lib\\multiprocessing\\context.py\u001b[0m in \u001b[0;36m_Popen\u001b[1;34m(process_obj)\u001b[0m\n\u001b[0;32m    320\u001b[0m         \u001b[1;32mdef\u001b[0m \u001b[0m_Popen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_obj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    321\u001b[0m             \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mpopen_spawn_win32\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPopen\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 322\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mPopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_obj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    323\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    324\u001b[0m     \u001b[1;32mclass\u001b[0m \u001b[0mSpawnContext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBaseContext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\programdata\\miniconda3\\lib\\multiprocessing\\popen_spawn_win32.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, process_obj)\u001b[0m\n\u001b[0;32m     87\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m                 \u001b[0mreduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprep_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mto_child\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 89\u001b[1;33m                 \u001b[0mreduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_obj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mto_child\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     90\u001b[0m             \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     91\u001b[0m                 \u001b[0mset_spawning_popen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\programdata\\miniconda3\\lib\\multiprocessing\\reduction.py\u001b[0m in \u001b[0;36mdump\u001b[1;34m(obj, file, protocol)\u001b[0m\n\u001b[0;32m     58\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprotocol\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m     \u001b[1;34m'''Replacement for pickle.dump() using ForkingPickler.'''\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 60\u001b[1;33m     \u001b[0mForkingPickler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprotocol\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     61\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m \u001b[1;31m#\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mBrokenPipeError\u001b[0m: [Errno 32] Broken pipe"
      ]
     }
    ],
    "source": [
-    "def compute_datetime(data, ini, end):\n",
+    "# entonces primero calculamos los datetime y los agregamos a la matriz de datos\n",
+    "# para gilizar, definimos multiprocessing\n",
+    "\n",
+    "def worker(data, ini, end):\n",
     "    print(\"starting worker range [{}, {}]... \".format(ini, end), end=\"\")\n",
-    "    ddtt = []\n",
-    "    displaced_date = []\n",
-    "    deltatime = timedelta(hours = 5)\n",
-    "    c = 0\n",
-    "    for i in range(ini, end):\n",
-    "        d = data[i][1]\n",
-    "        t = data[i][2]\n",
-    "        if \" \" in d:\n",
-    "            d = d.split(\" \")[0]\n",
-    "            datm = datetime.strptime(d + \" \" + t, '%Y-%m-%d %H:%M:%S')\n",
-    "        elif \"-\" in d:\n",
-    "            datm = datetime.strptime(d + \" \" + t, '%Y-%m-%d %H:%M:%S')\n",
-    "        else:\n",
-    "            datm = datetime.strptime(d + \" \" + t, '%d/%m/%Y %H:%M:%S')\n",
+    "#     ddtt = []\n",
+    "#     displaced_date = []\n",
+    "#     deltatime = timedelta(hours = 5)\n",
+    "#     c = 0\n",
+    "#     for i in range(ini, end):\n",
+    "#         d = data[i][1]\n",
+    "#         t = data[i][2]\n",
+    "#         if \" \" in d:\n",
+    "#             d = d.split(\" \")[0]\n",
+    "#             datm = datetime.strptime(d + \" \" + t, '%Y-%m-%d %H:%M:%S')\n",
+    "#         elif \"-\" in d:\n",
+    "#             datm = datetime.strptime(d + \" \" + t, '%Y-%m-%d %H:%M:%S')\n",
+    "#         else:\n",
+    "#             datm = datetime.strptime(d + \" \" + t, '%d/%m/%Y %H:%M:%S')\n",
     "        \n",
-    "        data[i][10] = (datm + deltatime).__str__()\n",
-    "        data[i][11] = datm\n",
-    "#         displaced_date.append((datm + deltatime).date().__str__())\n",
-    "#         ddtt.append(datm)\n",
-    "        c += 1\n",
-    "#     out_q.put(c)\n",
+    "#         data[i][10] = (datm + deltatime).__str__()\n",
+    "#         data[i][11] = datm\n",
+    "# #         displaced_date.append((datm + deltatime).date().__str__())\n",
+    "# #         ddtt.append(datm)\n",
+    "#         c += 1\n",
+    "# #     out_q.put(c)\n",
     "    print(\"done\")\n",
     "    \n",
     "def run_compute_datetime(data, N):\n",
     "    \n",
-    "    # obtenemos los indices\n",
+    "    # obtenemos los indices de los subrangos\n",
+    "    print(\"obteniendo sub rangos ... \")\n",
     "    r = data.shape[0] // N\n",
     "    idxs = np.arange(N + 1) * r\n",
     "    \n",
@@ -192,7 +200,8 @@
     "    for i in range(len(idxs)-1):\n",
     "        ini = idxs[i]\n",
     "        end = idxs[i+1]\n",
-    "        jobs.append(mp.Process(target=compute_datetime, args=(data, ini, end)))\n",
+    "        print(\"launching worker for [{},{}]\".format(ini, end))\n",
+    "        jobs.append(mp.Process(target=worker, args=(data, ini, end)))\n",
     "        jobs[-1].start()\n",
     "    print(\"waiting workers ...\")\n",
     "    for p in jobs:\n",
@@ -355,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
